# utilcpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  UtilFunctions.cmake
src/: CMakeLists.txt
src/nadam/: CMakeLists.txt  types.cpp  types.h
src/nadam/c/: CMakeLists.txt  khash.h  nadam.cpp  nadam.h
src/nadam/test/: CMakeLists.txt  nadam.cpp
src/util/: CMakeLists.txt  aspectid.h  aspecttype.h  blockstore.cpp  blockstore.h  lengthencoding.cpp  lengthencoding.h  loader.cpp  loader.h  loaderifc.h  semaphore.cpp  semaphore.h  serde.h  serdeifc.h  serdeimpl.cpp  serdeimpl.h  serdeimplbasic.cpp  serdeimplbasic.h  serdespec.h  serdespecbasic.h  typeinfo.h  typeinfofactory.h
src/util/crc/: digest.h
src/util/crc/test/: digest.cpp
src/util/digest/: CMakeLists.txt  crc.h  sha1.cpp  sha1.h
src/util/digest/test/: CMakeLists.txt  crc.cpp  sha1.cpp  sha1testvectors.cpp
src/util/sha1/: CMakeLists.txt  digest.cpp  digest.h
src/util/sha1/test/: CMakeLists.txt  digest.cpp  sha1testvectors.cpp
src/util/test/: CMakeLists.txt  blockstore.cpp  lengthencoding.cpp  semaphore.cpp  serdeimpl.cpp  serdespec.cpp  typeinfo.cpp
